Fix icon is not showing after being changed in the backend settings
https://3.basecamp.com/5798509/buckets/37595336/card_tables/cards/9461934855

--- a/plugins/gutenberg/blocks/header-bar/src/style.scss
+++ b/plugins/gutenberg/blocks/header-bar/src/style.scss
@@ -1023,7 +1023,7 @@
 		.user-menu-dropdown-menu {
 			position: absolute;
 			top: 100%;
-			right: 0;
+			right: -15px;
 			min-width: 320px;
 			max-width: 360px;
 			background: var(--dropdown-bg-color);
@@ -1380,6 +1380,16 @@
 		.dashicons,
 		.wbcom-header-bar-icon-inner {
 			font-size: var(--icon-size);
+		}
+
+		.wbcom-custom-icon {
+			display: flex;
+			align-items: center;
+
+			svg {
+				width: var(--icon-size);
+				height: var(--icon-size);
+			}
 		}
 
 		.count {
